SideBar over but issue in theme switch

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,9 @@
 
 
 /* @custom-variant dark(&:where(.dark, .dark *)); */
+html, body, #root {
+  height: 100%;
+}
 
 *{
    font-family: "Outfit", sans-serif;
