Issue with theme bg

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,12 +9,31 @@ html, body, #root {
 }
 
 *{
+    transition: background-color 0.3s, color 0.3s;
+
    font-family: "Outfit", sans-serif;
 }
-@theme {
+/* @theme {
   --color-primary: rgba(230, 204, 255, 0.5);
-}
+} */
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+:root {
+  --bg-color: white;
+  --text-color: black;
+}
+
+.dark {
+  --bg-color: #121212;
+  --text-color: white;
+}
+
+/* Apply variables */
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.4s ease, color 0.4s ease;
 }
